--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -31,8 +31,15 @@ jobs:
       - name: Checkout Action
         uses: actions/checkout@v3
 
-      - name: Setup python
-        uses: actions/setup-python@v2
+      - name: Install go and tfsec
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '^1.17.0'
+      - run: go install github.com/aquasecurity/tfsec/cmd/tfsec@latest
 
-      - name: pre-commit
-        uses: pre-commit/action@v2.0.3
+      - name: Setup python
+        uses: actions/setup-python@v3
+        runs: |
+          pip install pre-commit
+          pre-commit install
+          pre-commit
