--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install go and tfsec
-      - uses: actions/setup-go@v3
+        uses: actions/setup-go@v3
         with:
           go-version: '^1.17.0'
       - run: go install github.com/aquasecurity/tfsec/cmd/tfsec@latest
