--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -35,11 +35,11 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '^1.17.0'
-      - run: go install github.com/aquasecurity/tfsec/cmd/tfsec@latest
+        run: go install github.com/aquasecurity/tfsec/cmd/tfsec@latest
 
       - name: Setup python
         uses: actions/setup-python@v3
-        runs: |
+        run: |
           pip install pre-commit
           pre-commit install
           pre-commit
