--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   yaml:
     name: yaml code validation
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Action
         uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
 
   terraform:
     name: terraform code validation
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Action
         uses: actions/checkout@v3
